refactor: update ESLint and TypeScript configurations for improved type safety and code quality
- Changed ESLint configuration to use recommendedTypeChecked settings.
- Updated TypeScript configuration to enable strictNullChecks and forceConsistentCasingInFileNames.
- Adjusted rules in ESLint to warn on unsafe argument usage.
- Simplified TypeScript settings by removing unnecessary strict options.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,20 +16,10 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "forceConsistentCasingInFileNames": false,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "strict": false,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false,
-    "noImplicitReturns": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "suppressExcessPropertyErrors": true,
-    "noLib": false
+    "noFallthroughCasesInSwitch": false
   }
 }
