refactor: restructure frontend application with React, TypeScript, and Vite
- Removed legacy files including HTML, CSS, and JavaScript scripts.
- Introduced a new frontend structure using React with TypeScript and Vite for improved performance and development experience.
- Added Docker support for frontend development and production.
- Implemented a new calendar component for study session tracking.
- Established a comprehensive API client for backend communication.
- Enhanced user interface components with Tailwind CSS for better styling and responsiveness.
- Updated README documentation to reflect new project structure and setup instructions.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,9 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/study_planner?schema=public"
 
+# Better Auth Secret (generate with: npx @better-auth/cli secret or openssl rand -base64 32)
+BETTER_AUTH_SECRET=your-better-auth-secret-at-least-32-characters
+
 # Google OAuth (get from https://console.cloud.google.com/)
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=GOCSPX-your-google-client-secret
@@ -10,6 +13,3 @@ GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback/google
 NODE_ENV=development
 PORT=3000
 FRONTEND_URL=http://localhost:8080
-
-# Session
-SESSION_SECRET=your-super-secret-session-key-change-this
