--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,9 @@ services:
     ports:
       - "5173:5173"
     environment:
+      # URL externa (acessível pelo navegador do usuário)
       VITE_API_BASE_URL: http://localhost:3000
+      DOCKER_ENV: "true"
     volumes:
       - ./frontend:/app
       - /app/node_modules
