chore: update Jest configuration for improved module transformation
- Added support for transforming .mjs files in Jest configuration.
- Updated transformIgnorePatterns to include specific modules for better coverage during testing.

--- a/backend/package.json
+++ b/backend/package.json
@@ -72,6 +72,9 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(better-auth|better-call|@thallesp)/)"
+    ],
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
