refactor: simplify end-to-end test execution and enhance integration tests
- Updated Makefile and CI workflow to remove test path ignore patterns, allowing all end-to-end tests to run.
- Refactored integration tests for Sessions and WeeklyGoal to focus on business logic through services instead of direct Prisma operations.
- Removed outdated WeeklyGoalController and WeeklyGoal model tests to streamline the testing structure.
- Enhanced documentation for backend tests to clarify testing standards and practices.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           DATABASE_URL: postgresql://test:test@localhost:5433/study_planner_test?schema=public
 
       - name: Run e2e tests
-        run: cd backend && npm run test:e2e -- --testPathIgnorePatterns="app.e2e-spec|weekly-goal-controller|weekly-goal.e2e-spec"
+        run: cd backend && npm run test:e2e
         env:
           DATABASE_URL: postgresql://test:test@localhost:5433/study_planner_test?schema=public
           BETTER_AUTH_SECRET: test-secret-for-ci
