refactor: integrate jest-prisma for improved test isolation and rollback
- Replaced manual database cleanup with jest-prisma for automatic transaction rollback in end-to-end tests.
- Updated test configurations to utilize jest-prisma, enhancing test reliability and speed.
- Refactored tests in ConfigService, StudySessionsService, and WeeklyGoalService to leverage the new setup.
- Removed outdated database helper functions and setup files to streamline the testing process.
- Enhanced documentation to reflect changes in testing practices and the integration of jest-prisma.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["@types/jest", "@quramy/jest-prisma"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
