--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
