feat: enhance deployment process and documentation
- Added deployment commands to the Makefile for frontend and backend.
- Introduced netlify.toml for frontend build configuration and API proxying to the backend.
- Updated CI/CD workflow to include deployment steps for frontend and backend based on version tags.
- Enhanced README with deployment instructions and environment variable configurations.
- Added documentation for backend tests and cross-domain authentication solutions.
- Improved backend Dockerfile and health check endpoint for better deployment practices.

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,22 @@
 [build]
-  command = "npm run build"
+  base = "frontend"
+  command = "npm install && npm run build"
   publish = "dist"
 
+[build.environment]
+  # API calls will go through Netlify proxy (same domain = no third-party cookie issues)
+  VITE_API_BASE_URL = ""
+  VITE_FRONTEND_URL = "https://study-planner-front.netlify.app"
+
+# Proxy API requests to Fly.io backend (must be before the catch-all)
+[[redirects]]
+  from = "/api/*"
+  to = "https://study-planner-api.fly.dev/api/:splat"
+  status = 200
+  force = true
+  headers = {X-Forwarded-Host = "study-planner-front.netlify.app"}
+
+# SPA fallback (catch-all for client-side routing)
 [[redirects]]
   from = "/*"
   to = "/index.html"
