--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
-name: CI
+name: CI/CD
 
 on:
   push:
     branches: [main]
+    tags:
+      - 'frontend-v*'
+      - 'backend-v*'
   pull_request:
     branches: [main]
 
@@ -33,7 +36,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
 
       - name: Install backend dependencies
         run: cd backend && npm ci
@@ -50,7 +53,7 @@ jobs:
         run: cd backend && npm run test:e2e
         env:
           DATABASE_URL: postgresql://test:test@localhost:5433/study_planner_test?schema=public
-          BETTER_AUTH_SECRET: test-secret-for-ci
+          BETTER_AUTH_SECRET: test-secret-for-ci-minimum-32-chars
 
   build-frontend:
     name: Frontend Build
@@ -63,7 +66,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
 
       - name: Install frontend dependencies
         run: cd frontend && npm ci
@@ -71,5 +74,56 @@ jobs:
       - name: Build frontend
         run: cd frontend && npm run build
         env:
-          VITE_API_BASE_URL: http://localhost:3000
+          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
+          VITE_FRONTEND_URL: ${{ vars.VITE_FRONTEND_URL }}
 
+  deploy-frontend:
+    name: Deploy Frontend to Netlify
+    runs-on: ubuntu-latest
+    needs: [test-backend, build-frontend]
+    if: startsWith(github.ref, 'refs/tags/frontend-v')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install frontend dependencies
+        run: cd frontend && npm ci
+
+      - name: Build frontend
+        run: cd frontend && npm run build
+        env:
+          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
+          VITE_FRONTEND_URL: ${{ vars.VITE_FRONTEND_URL }}
+
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v3
+        with:
+          publish-dir: frontend/dist
+          production-deploy: true
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+
+  deploy-backend:
+    name: Deploy Backend to Fly.io
+    runs-on: ubuntu-latest
+    needs: [test-backend, build-frontend]
+    if: startsWith(github.ref, 'refs/tags/backend-v')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Fly CLI
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
+      - name: Deploy to Fly.io
+        run: cd backend && flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
