chore: update Docker configurations and enhance LandingPage
- Changed the Dockerfile for the backend test environment to use Dockerfile.test.
- Updated docker-compose files to reflect user permissions for containers.
- Removed troubleshooting section from README for a cleaner presentation.
- Added a new section in LandingPage to explain the importance of measuring net hours with multiple informative cards.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -5,19 +5,24 @@ WORKDIR /app
 # Instalar dependências do sistema necessárias para Prisma
 RUN apk add --no-cache openssl libc6-compat
 
+# Change ownership to node user (uid 1000)
+RUN chown -R node:node /app
+
+# Switch to node user
+USER node
+
 # Copiar arquivos de dependências
-COPY package*.json ./
-COPY prisma ./prisma/
+COPY --chown=node:node package*.json ./
+COPY --chown=node:node prisma ./prisma/
 
 # Instalar dependências
 RUN npm install
 
-# Gerar Prisma Client (será regenerado quando necessário via volume)
+# Gerar Prisma Client
 RUN npx prisma generate || true
 
 # Expor porta
 EXPOSE 3000
 
-# Comando padrão (será sobrescrito pelo docker-compose)
+# Comando padrão
 CMD ["npm", "run", "start:dev"]
-
