--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -27,6 +25,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: study-planner-backend
     restart: unless-stopped
+    user: "${UID:-1000}:${GID:-1000}"
     ports:
       - "3000:3000"
     environment:
@@ -54,6 +53,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: study-planner-frontend
     restart: unless-stopped
+    user: "${UID:-1000}:${GID:-1000}"
     ports:
       - "5173:5173"
     environment:
