--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "@astrojs/react": "^4.1.3",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/tailwind": "^6.0.1",
-    "astro": "^5.1.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
@@ -29,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/typography": "^0.5.19",
+    "astro": "^5.1.2",
     "better-auth": "^1.4.7",
     "chart.js": "^4.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
