--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -11,6 +11,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-study_planner}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - study-planner-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
@@ -19,3 +21,7 @@ services:
 
 volumes:
   postgres_data:
+
+networks:
+  study-planner-network:
+    external: true
