--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.3",
     "cors": "^2.8.5",
     "express-session": "^1.18.2",
+    "graphql": "^16.12.0",
     "helmet": "^8.1.0",
     "mercadopago": "^2.11.0",
     "nest-winston": "^1.10.2",
